<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weiss Schwarz Helper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="intro">Our app has detected that this is your first time running this app or that our card database has changed.
        Please wait while we rebuild your personal Weiss Schwarz database. In the meantime, please enjoy the below picture of an animated 
        fox that has had way too many drugs (or do something else on your phone).</string>
	<string name="name_field">Card Name: </string>
	<string name="clear_forms">Clear search forms after submit</string>
	<color name="white">#FFFFFF</color>
	
	<!-- Action Bar Material -->
	<string name="return_home">Return Home</string>
	<string name="eraser">Eraser</string>
	
	<!-- Main page material -->
	<string name="settings_title">Settings\n</string>
	<string name="card_number_search">Card No.\nSearch</string>
	<string name="advanced_search">Advanced\nSearch</string>
	<string name="random_card">Random\nCard</string>
	<string name="CLAPPAY">Claptrap goin\' HAM.</string>
	
	<!-- Number Search Material -->
	<string name="get_info">Get Card Info</string>
	<string name="card_number">Card Number</string>
	
	<!-- Advanced Search Material -->
	<string name="rarity">Rarity:</string>
	<string name="color">Color:</string>
	<string name="side">Side:</string>
	<string name="level">Level:</string>
	<string name="cost">Cost:</string>
	<string name="power">Power:</string>
	<string name="soul">Soul:</string>
	<string name="trait1">Trait 1:</string>
	<string name="trait2">Trait 2:</string>
	<string name="triggers">Triggers:</string>
	<string name="flavor">Flavor:</string>
	<string name="text">Text:</string>
	<string name="spaced_out_search">&#160;&#160;&#160;&#160;&#160;&#160;&#160;Search&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
	
	<string-array name="rarity_array">
	    <item>Any Rarity</item>
        <item>C</item>
		<item>CC</item>
		<item>CR</item>
		<item>PR</item>
		<item>R</item>
		<item>RE</item>
		<item>RR</item>
		<item>RRR</item>
		<item>SP</item>
		<item>SR</item>
		<item>SSP</item>
		<item>TD</item>
		<item>U</item>
		<item>XR</item>
    </string-array>
    
	<string-array name="color_array">
	    <item>Any Color</item>
	    <item>Blue</item>
		<item>Green</item>
		<item>Red</item>
		<item>Yellow</item>
    </string-array>

	<string-array name="sides_array">
	    <item>Any Side</item>
	    <item>Schwarz Character</item>
		<item>Schwarz Climax</item>
		<item>Schwarz Event</item>
		<item>Weiss Character</item>
		<item>Weiss Climax</item>
		<item>Weiss Event</item>
    </string-array>
    
	<string-array name="triggers_array">
	    <item>Any Trigger</item>
	    <item>2 Soul</item>
		<item>Draw</item>
		<item>None</item>
		<item>Salvage</item>
		<item>Soul</item>
		<item>Soul Bounce</item>
		<item>Soul Shot</item>
		<item>Stock</item>
		<item>Treasure</item>
    </string-array>
    
	<string-array name="comparisons_array">
	    <item>&lt;</item>
		<item>&gt;</item>
		<item>=</item>
		<item>&lt;=</item>
		<item>&gt;=</item>
    </string-array>
    
</resources>
