<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
  	android:layout_height="wrap_content">
  	
	 <RelativeLayout
	     android:id="@+id/RelativeLayout1"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:gravity="top"
	     android:orientation="horizontal"
	     android:paddingTop="10dp"
	     android:paddingLeft="10dp"
	     android:paddingRight="10dp">
	     
			<TextView
			    android:id="@+id/cardName"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignBottom="@+id/edit_name"
			    android:layout_alignParentLeft="true"
			    android:text="@string/name_field"
			    android:textSize="@dimen/guessing" />

			<AutoCompleteTextView
			    android:id="@+id/edit_name"
			    android:singleLine="true"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentRight="true"
			    android:layout_toRightOf="@+id/cardName"
			    android:completionThreshold="2">
	    	</AutoCompleteTextView>
	    	
	    	<requestFocus
       			android:layout_width="match_parent"
        		android:layout_height="match_parent" />
	    	
			<Spinner
			    android:id="@+id/rarity_spinner"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_toRightOf="@+id/rarity"
			    android:layout_below="@+id/edit_name"
			    android:entries="@array/rarity_array" />

			<TextView
			    android:id="@+id/rarity"
			    android:layout_alignBottom="@+id/rarity_spinner"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignRight="@+id/cardName"
			    android:text="@string/rarity"
			    android:textSize="@dimen/guessing" />
			
			<Spinner
			    android:id="@+id/color_spinner"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_toRightOf="@+id/color"
			    android:layout_below="@+id/rarity_spinner"
			    android:entries="@array/color_array" />

			<TextView
			    android:id="@+id/color"
			    android:layout_alignBottom="@+id/color_spinner"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignRight="@+id/cardName"
			    android:text="@string/color"
			    android:textSize="@dimen/guessing" />
			
			<Spinner
			    android:id="@+id/side_spinner"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_toRightOf="@+id/side"
			    android:layout_below="@+id/color_spinner"
			    android:entries="@array/sides_array" />

			<TextView
			    android:id="@+id/side"
			    android:layout_alignBottom="@+id/side_spinner"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignRight="@+id/cardName"
			    android:text="@string/side"
			    android:textSize="@dimen/guessing" />
			
			<Spinner
			    android:id="@+id/level_comparison"
			    android:layout_alignBottom="@+id/edit_level"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_toRightOf="@+id/level"
			    android:layout_below="@+id/side_spinner"
			    android:entries="@array/comparisons_array" />
			
			<EditText
			    android:id="@+id/edit_level"
			    android:layout_below="@+id/side"
			    android:singleLine="true"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_toRightOf="@+id/level_comparison"
			    android:inputType="number" >
	    	</EditText>

			<TextView
			    android:id="@+id/level"
			    android:layout_alignBottom="@+id/edit_level"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignRight="@+id/cardName"
			    android:text="@string/level"
			    android:textSize="@dimen/guessing" />
			
			<Spinner
			    android:id="@+id/cost_comparison"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_toRightOf="@+id/cost"
			    android:layout_alignBottom="@+id/edit_cost"
			    android:entries="@array/comparisons_array" />
			
			<EditText
			    android:id="@+id/edit_cost"
			    android:singleLine="true"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/edit_level"
			    android:layout_toRightOf="@+id/cost_comparison"
			    android:inputType="number" >
	    	</EditText>

			<TextView
			    android:id="@+id/cost"
			    android:layout_alignBottom="@+id/edit_cost"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignRight="@+id/cardName"
			    android:text="@string/cost"
			    android:textSize="@dimen/guessing" />
			
			<Spinner
			    android:id="@+id/power_comparison"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_toRightOf="@+id/power"
			    android:layout_alignBottom="@+id/edit_power"
			    android:entries="@array/comparisons_array" />
			
			<EditText
			    android:id="@+id/edit_power"
			    android:singleLine="true"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/edit_cost"
			    android:layout_toRightOf="@+id/power_comparison"
			    android:inputType="number" >

	    	</EditText>

			<TextView
			    android:id="@+id/power"
			    android:layout_alignBottom="@+id/edit_power"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignRight="@+id/cardName"
			    android:text="@string/power"
			    android:textSize="@dimen/guessing" />
			
			<Spinner
			    android:id="@+id/soul_comparison"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_toRightOf="@+id/soul"
			    android:layout_alignBottom="@+id/edit_soul"
			    android:entries="@array/comparisons_array" />
			
			<EditText
			    android:id="@+id/edit_soul"
			    android:singleLine="true"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/edit_power"
			    android:layout_toRightOf="@+id/soul_comparison"
			    android:inputType="number" >

	    	</EditText>

			<TextView
			    android:id="@+id/soul"
			    android:layout_alignBottom="@+id/edit_soul"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignRight="@+id/cardName"
			    android:text="@string/soul"
			    android:textSize="@dimen/guessing" />
			
			<EditText
			    android:id="@+id/edit_trait1"
			    android:singleLine="true"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/edit_soul"
			    android:layout_toRightOf="@+id/trait1">
	    	</EditText>

			<TextView
			    android:id="@+id/trait1"
			    android:layout_alignBottom="@+id/edit_trait1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignRight="@+id/cardName"
			    android:text="@string/trait1"
			    android:textSize="@dimen/guessing" />
			
			<EditText
			    android:id="@+id/edit_trait2"
			    android:singleLine="true"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/edit_trait1"
			    android:layout_toRightOf="@+id/trait2">
	    	</EditText>

			<TextView
			    android:id="@+id/trait2"
			    android:layout_alignBottom="@+id/edit_trait2"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignRight="@+id/cardName"
			    android:text="@string/trait2"
			    android:textSize="@dimen/guessing" />
			
			<Spinner
			    android:id="@+id/triggers_spinner"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_toRightOf="@+id/triggers"
			    android:layout_below="@+id/edit_trait2"
			    android:entries="@array/triggers_array" />

			<TextView
			    android:id="@+id/triggers"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignBottom="@+id/triggers_spinner"
			    android:layout_alignRight="@+id/cardName"
			    android:text="@string/triggers"
			    android:textSize="@dimen/guessing" />
			
			<EditText
			    android:id="@+id/edit_flavor"
			    android:singleLine="true"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/triggers_spinner"
			    android:layout_toRightOf="@+id/flavor">

	    	</EditText>

			<TextView
			    android:id="@+id/flavor"
			    android:layout_alignBottom="@+id/edit_flavor"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignRight="@+id/cardName"
			    android:text="@string/flavor"
			    android:textSize="@dimen/guessing" />
			
			<EditText
			    android:id="@+id/edit_text"
			    android:singleLine="true"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/edit_flavor"
			    android:layout_toRightOf="@+id/text">

	    	</EditText>

			<TextView
			    android:id="@+id/text"
			    android:layout_alignBottom="@+id/edit_text"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignRight="@+id/cardName"
			    android:text="@string/text"
			    android:textSize="@dimen/guessing" />

			<Button
			    android:id="@+id/button1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/edit_text"
			    android:layout_centerHorizontal="true"
			    android:onClick="advancedSearch"
			    android:text="@string/spaced_out_search" />

</RelativeLayout>
</ScrollView>