<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white">
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/CLAPPAY"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/claptrapgoingham" />
    
    <LinearLayout
        android:id="@+id/godLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

	    <LinearLayout
	        android:id="@+id/linlayout1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_marginRight="20dp"
	        android:orientation="vertical" >
	
	        <Button
	            android:id="@+id/numberSearch"
	            android:paddingTop="14sp"
	            style="?android:attr/borderlessButtonStyle"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:drawableTop="@drawable/pound"
	            android:onClick="goToNumSearch"
	            android:text="@string/card_number_search"
	            android:textSize="@dimen/abs__action_bar_subtitle_text_size" />
	
	        <Button
	            android:id="@+id/randomCard"
	            android:paddingTop="14sp"
	            android:layout_marginTop="20dp"
	            style="?android:attr/borderlessButtonStyle"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:drawableTop="@drawable/dice"
	            android:onClick="randomCard"
	            android:text="@string/random_card"
	            android:textSize="@dimen/abs__action_bar_subtitle_text_size" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/linlayout2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_marginLeft="20dp"
	        android:orientation="vertical" >
	
	        <Button
	            android:id="@+id/advancedSearch"
	            android:paddingTop="14sp"
	            style="?android:attr/borderlessButtonStyle"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:drawableTop="@drawable/mag_glass"
	            android:onClick="goToAdvancedSearch"
	            android:text="@string/advanced_search"
	            android:textSize="@dimen/abs__action_bar_subtitle_text_size" />
	
	        <Button
	            android:id="@+id/settings"
	            android:paddingTop="14sp"
	            android:layout_marginTop="20dp"
	            style="?android:attr/borderlessButtonStyle"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:drawableTop="@drawable/gear"
	            android:onClick="goToSettings"
	            android:text="@string/settings_title"
	            android:textSize="@dimen/abs__action_bar_subtitle_text_size" />
	    </LinearLayout>
    </LinearLayout>

</RelativeLayout>